<resources>
    <string name="app_name">JEP/WKPP Prototype</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_username">Enter Username</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="quantity">Quantity</string>
    <string name="payment_type">Payment Type</string>
    <string name="dish_name">Item</string>
    <string name="cost">Price</string>
    <string name="select_all">select all</string>
    <string name="deselect_all">deselect all</string>
    <string name="enter_your_e_mail">Enter your e-mail</string>
    <string name="enter_e_mail">Enter e-mail</string>
    <string name="reenter_your_password">Re-enter password</string>
    <string name="enter_a_username">Enter a username</string>


    <string-array name="quantity_arrays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>

    </string-array>
    <string-array name="month_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>

    </string-array>

    <string-array name="payment_type_array">
        <item>Lunch Card</item>
        <item>Cash</item>
    </string-array>

    <string-array name="Departments">
        <item>Warehousing</item>
        <item>Administrative</item>
        <item>Engineering</item>
        <item>Auxiliary</item>
        <item>Chemistry</item>
        <item>Human Resource</item>
        <item>Accounting</item>
        <item>Finance</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ordering">Orders for Today</string>
    <string name="item_creation">Item Creation</string>
    <string name="analysis">Analysis</string>
    <string name="search">Search</string>
    <string name="no_data_available">No Data Available For This Month</string>
    <string name="gen_please_wait">PDF Creator</string>
    <string name="gen_pdf_file">PDF File is being created</string>
    <string name="name_as_appears_on_id">Name as appears on ID</string>
    <string name="username">Username</string>
    <string name="employee_id">Employee ID</string>
    <string name="contact_number">Contact number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile_page">Profile Page</string>
    <string name="full_name">Full Name</string>
    <string name="balance">Balance</string>
    <string name="available_balance">Available Balance</string>
    <string name="department">Department</string>
    <string name="email">Email</string>
    <string name="update_my_password">Update My Password</string>
    <string name="view_requests">View Requests</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="request_a_balance_update">Request a balance update</string>
    <string name="_100_balance_request">$100 Balance Request</string>
    <string name="_500_balance_request">$500 Balance Request</string>
    <string name="_1000_balance_request">$1000 Balance Request</string>
    <string name="_2000_balance_request">$2000 Balance Request</string>
    <string name="_5000_balance_request">$5000 Balance Request</string>
    <string name="other_balance_request">Other Balance Request</string>
    <string name="PasswordIncorrect">Password is Incorrect</string>
    <string name="PasswordisEmpty">The password is empty</string>
    <string name="dialogSubmit">Submit</string>
    <string name="dialogCancel">Cancel</string>
    <string name="fullnameEditable">Full name field  now editable</string>
    <string name="usernameEditable">username field  now editable</string>
    <string name="departmentEditable">Department field now editable</string>
    <string name="contactEditable">Contact field now editable</string>
    <string name="checkInput">Please check input fields</string>
    <string name="requestSubmitted">Request Submitted</string>
    <string name="passwordIncorrect">Your Password is Incorrect</string>
    <string name="enter_a_review_title">Enter a review title</string>
    <string name="enter_a_review_description">Enter a review description</string>
    <string name="select_review_item_s">Select Review Item(s)</string>
    <string name="add">Add</string>
    <string name="please_add_a_review_topic_from_the_list">Please add a review topic from the list</string>
    <string name="description">Description</string>
    <string name="order_type">Order Type :</string>
    <string name="data">Data</string>
    <string name="total_cost">Total Cost :</string>
    <string name="paymemt_type">Paymemt Type :</string>
    <string name="status">STATUS : </string>
    <string name="please_enter_a_value">Please Enter A Value</string>
    <string name="please_enter_your_password">Please Enter Your Password</string>
    <string name="total_cost_0000">Total Cost : $0000</string>
    <string name="checkout">Checkout</string>
    <string name="myself">Myself</string>
    <string name="other">Other</string>
    <string name="checkoutcaps">CHECKOUT</string>
    <string name="who_will_be_paying">Who will be paying?</string>
    <string name="how_will_you_be_paying">How will you be paying?</string>
    <string name="do_you_have_any_special_request">Do you have any special request?</string>
    <string name="you_requested_an_amount">You requested an amount</string>
    <string name="name_of_dish">Name of dish</string>
    <string name="enter_the_ingredients_of_the_dish">Enter the ingredients of the dish</string>
    <string name="enter_the_cost">Enter the cost</string>
    <string name="create">Create</string>
    <string name="logoutmessage">Are you sure you wish to logout?</string>
    <string name="dialogYes">Yes</string>
    <string name="dialogNo">No</string>
    <string name="titleMenu">Menu</string>
    <string name="titleItems">Items</string>
    <string name="breakfast_cart_items">Breakfast Cart items</string>
    <string name="buttontitledone">Done</string>
    <string name="lunch_cart_items">Lunch Cart Items</string>
    <string name="title">Title</string>
    <string name="remove_from_cart">Remove From Cart</string>
    <string name="_1">1</string>
    <string name="price">Price</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="add_to_breakfast_list">Add To Breakfast List</string>
    <string name="add_to_lunch_list">Add To Lunch List</string>
    <string name="item_picture">Item Picture</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="generate_report">Generate Report</string>

    <string name="dialogAdd">Add</string>
    <string name="update">Update</string>
    <string name="menu_item">Menu Item</string>
    <string name="ingredients">Ingredients</string>
    <string name="amount_spent_on_lunch">Amount Spent on Lunch</string>
    <string name="_0">$0</string>
    <string name="amount_spent_on_breakfast">Amount Spent on Breakfast</string>
    <string name="report">Report</string>
    <string name="generate_single_item_report">Generate Single Item Report</string>
    <string name="generate_monthly_income_report">Generate monthly income Report</string>
    <string name="generate_weekly_income_report">Generate Weekly Income Report</string>
    <string name="generate_all_items_report">Generate All Items Report</string>
    <string name="generate_performance_report">Generate Performance Report</string>
    <string name="generate_income_report_for_the_week">Generate Income Report for the week</string>
    <string name="daily_income_report">Daily Income Report</string>
    <string name="item_title">Item Title</string>
    <string name="item_cost_description">Item Cost/Description</string>
    <string name="total_from_breakfast">Total from Breakfast:</string>
    <string name="total">total</string>
    <string name="total_from_lunch">Total from Lunch:</string>
    <string name="lunch_card_total">Lunch Card Total:</string>
    <string name="cash_total">Cash Total:</string>
    <string name="lunchcard">Lunch card</string>
    <string name="cash">Cash</string>
    <string name="breakfast_orders">Breakfast Orders</string>
    <string name="lunch_orders">Lunch Orders</string>
    <string name="id">id</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="Username">Username :</string>
    <string name="order_status">order status</string>
    <string name="request">request</string>
    <string name="Payment">Payment Type :</string>
    <string name="Paymenttype">Payment Type</string>
    <string name="collect_payment">Collect Payment</string>
    <string name="Incomplete">Incomplete</string>
    <string name="Prepared">Prepared</string>
    <string name="Cancelled">Cancelled</string>
    <string name="Reports">Reports</string>
    <string name="Reviews">Reviews</string>
    <string name="amount_spent_by_card">Amount Spent by Card</string>
    <string name="amount_spent_by_cash">Amount Spent by Cash</string>
    <string name="pay_for_order_requests">Pay for Order Requests</string>
    <string name="todo">TODO</string>
    <string name="would_like_you_to_pay_for_his_order">would like you to pay for his order</string>
    <string name="is_the_order_amount">is the order amount</string>
    <string name="approve">Approve</string>
    <string name="deny">Deny</string>
    <string name="Users">Users</string>
    <string name="Requests">Requests</string>
    <string name="no_data_available_currently">No Data Available Currently</string>
    <string name="update_all">Update All</string>
    <string name="new_users">New Users</string>
    <string name="Add">Add</string>
    <string name="Edit">Edit</string>
    <string name="amount">Amount</string>
    <string name="see_item_reviews">See Item Reviews</string>
    <string name="no_reviews_available">No reviews available</string>
    <string name="enter_a_employee_id">Enter a Employee ID</string>
    <string name="Subtract">Subtract</string>
    <string name="Addtobalance">Add to balance</string>
    <string name="subtract_from_balance">Subtract from balance</string>
    <string name="add_to_user_balance">Add to user balance</string>
    <string name="employeeid">EmployeeID</string>
    <string name="select_department">Select Department</string>
    <string name="none">none</string>
    <string name="orderid">OrderID :</string>
    <string name="total_costdollarsign">Total Cost : $</string>
    <string name="you_have_yet_to_make_any_orders">You have no orders to display</string>
    <string name="you_currently_have_no_balance_requests">You currently have no balance requests</string>
    <string name="you_currently_have_no_orders">You currently have no orders</string>


</resources>
