<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <RadioGroup
            android:id="@+id/paybygroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginTop="109dp"
            android:layoutDirection="ltr"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RadioButton
                android:id="@+id/myself"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/myself"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:textSize="18sp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/checkoutitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/border"
                android:padding="10dp"
                android:text="@string/checkoutcaps"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/howpaytitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:paddingTop="5dp"
                android:text="@string/who_will_be_paying"
                android:textAlignment="center"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent" />


        </LinearLayout>

        <AutoCompleteTextView
            android:id="@+id/autoCompleter"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_marginStart="158dp"
            android:layout_marginTop="129dp"
            android:hint="@string/enter_a_username"
            android:text=""
            android:textColor="@android:color/black"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="188dp"
            android:layout_marginEnd="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/paymentype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/how_will_you_be_paying"
                android:textAlignment="center"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/paymentypespinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:dropDownSelector="@drawable/ic_arrow_down"
                android:entries="@array/payment_type_array" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="255dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/requestitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/do_you_have_any_special_request"
                android:textAlignment="center"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/requestfield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:maxLength="50"
                android:maxLines="2"
                android:text="@string/none"
                android:textColor="@android:color/black" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="324dp"
            android:orientation="vertical"
            android:paddingTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/totalcostitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_cost"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/totalcost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-black"
                android:text=""
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="18sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>